*** Version 2.6.4   (25 avril 2017)   ***
- Amélioration
Les tables et les champs de la base de données sont renommés en minuscules (compatibilité avec le paramètre mysql lower_case_table_names toutes valeurs et compatibilité Windows)

*** Version 2.6.3   (20 avril 2017)   ***
- Correction
Corrige les notifications lors de la modification des plannings (n'envoie que les différences et seulement aux agents pour qui des différences existent)

*** Version 2.6.2   (19 avril 2017)   ***
- Correction
Corrige la recherche des quotas hebdomadaires (menu du planning et feuille de temps)

*** Version 2.6   (16 mars 2017)   ***
- Correction
LDAP - Active Directory : Corrige le script de mise à jour

*** Version 2.5.9   (14 mars 2017)   ***
- Correction
LDAP - Active Directory : renomme l'attribut samAccountName en samaccountname
Planning - importation : n'importe pas les agents s'ils sont sur des postes ou horaires supprimés

*** Version 2.5.8   (10 mars 2017)   ***
- Correction
Corrige les problèmes de modification et de suppression des modèles
Corrige le problème des agents non-trouvés dans le menu dû à un mauvais encodage de caractères du champ personnel/service

*** Version 2.5.7   (8 mars 2017)   ***
- Améliorations
LDAP : Compatibilité Active Directory
LDAP : Test des paramètres depuis la page de configuration
Mail : Test des paramètres depuis la page de configuration

- Securité
Mise à jour de PHPMailer (version 2.5.22)
Clé personnelle pour le cryptage des mots de passe LDAP et SMTP (include/config.php à modifier manuellement si mise à jour)

- Correction
Affichage des absents en bas du planning en configuration mono-site

*** Version 2.5.6   (6 mars 2017)   ***
- Corrections
Corrige l'agenda : barre les postes pour lesquels l'agent est absent

*** Version 2.5.5   (6 mars 2017)   ***
- Améliorations
Ajoute un index sur le champ site de la table pl_poste de façon à accélérer les requêtes SQL sur cette table (page planning)