@@ -2,6 +2,9 @@
 - Amélioration
 Les tables et les champs de la base de données sont renommés en minuscules (compatibilité avec le paramètre mysql lower_case_table_names toutes valeurs et compatibilité Windows)
 
+- Correction
+Corrige l'appel à disponibilité
+
 *** Version 2.6.3   (20 avril 2017)   ***
 - Correction
 Corrige les notifications lors de la modification des plannings (n'envoie que les différences et seulement aux agents pour qui des différences existent)
